Fix showcase section mobile issues

--- a/css/style.css
+++ b/css/style.css
@@ -393,3 +393,21 @@ code, pre {
   }
 
 }
+
+/* || Showcase section fix || */
+
+@media (max-width: 930px) {
+  .grid, .showcase .grid {
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  text-align: center;
+}
+
+.showcase {
+  height: auto;
+}
+
+.showcase__form {
+  margin-inline: auto;
+}
+}
